--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@greatnxy/mi-smb",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "type": "module",
@@ -18,7 +18,7 @@
   "author": "GreatNXY",
   "license": "MIT",
   "dependencies": {
-    "@greatnxy/smb2": "0.2.12",
+    "@greatnxy/smb": "1.0.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
