--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@greatnxy/mi-smb",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "index.js",
   "type": "module",
@@ -19,7 +19,8 @@
   "license": "MIT",
   "dependencies": {
     "@greatnxy/smb": "1.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pinyin": "^3.1.0"
   },
   "devDependencies": {
     "@types/express": "latest"
